Fill in the details of the new webpage
Add a image of the recipe.  Add a description of the recipe.  Add the
ingredients of the recipe.  Add the preparation instruction of the
recipe.

--- a/recipes/baked-penne.html
+++ b/recipes/baked-penne.html
@@ -7,6 +7,108 @@
     </head>
 
     <body>
-        <h1>Baked Penne</h1>
+            <h1>Baked Penne</h1>
+
+            <img src="../images/baked-penne.jpg" alt="An casserole dish
+            filled with penne pasta in a tomato sauce covered in 
+            mozzerella cheese." height="700" width="925">
+
+            <h2>Description</h2>
+
+            <p>
+                The quintessential baked pasta dish.  Toothfull penne in a 
+                spicy arrabiatta sauce mixed with sausage and ricotta cheese.
+                Then it is topped by mozzerella and parmasean cheese.
+            </p>
+
+            <p>
+                This American version of an Italian dish will make your mouth 
+                water.  This recipe was developed for friends and it was so
+                well received we decided to share it with the world!  Enjoy!
+            </p>
+
+            <h2>Ingredients</h2>
+
+            <ul>
+                <li>1 lbs Hot Italian Sausage</li>
+                <li>2 tbsps Olive Oil</li>
+                <li>1 tbsp minced garlic</li>
+                <li>1/2 tbsp red pepper flakes</li>
+                <li>1 cup of your favorite red wine</li>
+                <li>28 ounces of canned crushed tomatoes</li>
+                <li>1 tbsp of dried oregano</li>
+                <li>1 tbsp of dried basil</li>
+                <li>3 bay leaves</li>
+                <li>8 ounces of ricotta cheese</li>
+                <li>1 cup of mozzerella cheese</li>
+                <li>salt and pepper to taste</li>
+                <li> 2 ounces of parmasean cheese</li>
+                
+            </ul>
+
+            <h2>Steps</h2>
+
+            <ol>
+                <li>Preheat the oven to 350 F.  Heat a 5 qt dutch oven on 
+                    medium heat.  Brown sausage links, about 5 minutes.  
+                    Remove the sausages from the the dutch oven retaining the 
+                    fat that remains in the pan. Let the sausage links rest for 
+                    about 5 minutes then cut each link into 6 pieces.
+                </li>
+
+                <li>Add additional oil as needed to the heated dutch oven as 
+                    needed.  Add the garlic and the red pepper flake to the 
+                    oil and fry for 30 seconds or until aromatic.  Return the 
+                    sausage to the pot and saute until fully cooked, about 3 
+                    minutes.
+                </li>
+                    
+                <li>
+                    Add the wine to the pot and reduce until the alcohol is 
+                    cooked off, around 3-5 minutes.  Add the can of crushed 
+                    tomatoes to the pot and reduce the heat to medium low heat.
+                </li>
+
+                <li>
+                    Bring the sauce to a simmer and stir the oregano, basil, 
+                    and bay leaves into the sauce.  Cover and let the sauce 
+                    simmer between 30 - 60 minutes. 
+                </li>
+
+                <li>
+                    Bring a pot of salted water to a boil and cook your pasta 
+                    according to the box instructions.  Cooking times vary 
+                    depending on the brand and makeup of the pasta.
+                </li>
+
+                <li>
+                    Strain off the pasta and set aside trying to time the 
+                    pasta to be done the same time the sauce is ready.   
+                </li>
+
+                <li>
+                    Once the sauce is done add salt to taste.  Then add the 
+                    ricotta to the sauce, making sure that the ricotta is 
+                    dry as any moisture can break the emulsion of the sauce.  
+                    If the ricotta is wet pat it dry between two sheets of 
+                    paper towels or wring it out in cheese cloth.   
+                </li>
+
+                <li>
+                    Stir the cheese into the sauce, making sure it is evenly 
+                    distributed in the sauce.  Add the pasta and stir to fully 
+                    incorporate the pasta.  
+                </li>
+
+                <li>
+                    Place the pasta into a casserole dish and sprinkle the 
+                    shredded mozzerella cheese on top cooking for 20 minutes.  
+                    Once done let the dish cool for 5 minutes. 
+                </li>
+
+                <li>
+                    Garnish with parmasean cheese as desired.  Enjoy! 
+                </li>
+            </ol>
     </body>
 </html>
