Add 2 new webpages called Chicken Teriyaki and Mexican Red rice
Create 2 new webpages, one called Teriyaki Chicken the other called
Mexican Red Rice.  Format the Teriyaki Chicken recipe and add a title,
Heading, image of said dish, and a brief discripton.

Update the index file to link to the Teriyaki Chicken recipe and the
mexican red rice recipe.

--- a/recipes/baked-penne.html
+++ b/recipes/baked-penne.html
@@ -9,9 +9,9 @@
     <body>
             <h1>Baked Penne</h1>
 
-            <img src="../images/baked-penne.jpg" alt="An casserole dish
-            filled with penne pasta in a tomato sauce covered in 
-            mozzerella cheese." height="700" width="925">
+            <img src="../images/baked-penne.jpg" alt="An casserole dish filled 
+            with penne pasta in a tomato sauce covered in mozzerella cheese." 
+            height="700" width="925">
 
             <h2>Description</h2>
 
