--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/baked-penne.html">Baked Penne</a></li>
+            <li><a href="./recipes/teriyaki-chicken.html">Teriyaki Chicken</a></li>
+            <li><a href="./recipes/mexican-red-rice.html">Mexican Red Rice</a></li>
         </ul>
     </body>
 </html>
