Create Boiler Plate for new recipes.
Create the Boiler Plate code for Arroz con Pollo and Teriyaki Chicken
recipes.  Modify all files for adherence to code formating conventions.
Add discriptions to both Arroz con Pollo and teriyaki Chicken recipes.

--- a/recipes/teriyaki-chicken.html
+++ b/recipes/teriyaki-chicken.html
@@ -16,10 +16,23 @@
 
         <h2>Description</h2>
 
-        <p>Nobody can say that they do not love a good Teriyaki chicken recipe.  
+        <p>
+            Nobody can say that they do not love a good Teriyaki chicken recipe.  
             With a strong sweet and salty taste, the luscious chicken thighs 
             coat you toungue with a strong umami flavor that you keep going 
             back to again and again.
         </p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li></li>
+        </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
