Add a photo of Arroz con Pollo and implement it within the code.
Add a photo of Arroz con Pollo for the webpage of the same name.
Rename arroz con pollo html file for uniformity with the rest of the
code.  Remove all mention of mexican red rice from index file and add
arroz con pollo in it's place.

--- a/recipes/arroz-con-pollo.html
+++ b/recipes/arroz-con-pollo.html
@@ -9,14 +9,22 @@
     <body>
         <h1>Arroz con Pollo</h1>
 
+        <img src="../images/arroz-con-pollo.jpg" alt="A photo of a golden
+        chicken thigh and leg on top of a bed of rice.  To the left side are 
+        pinto beans as a sidedish." height="750" width="950">
+
         <h2>Discription</h2>
 
         <p>
             Most of my favorite foods growing up was rice. With the uncanny
             ability to take on any flavor that was cooked with it that made it
             never boring to eat.  Amongst my favorite rice dishes is Arroz con 
-            Pollo.  I have eaten it more than I would like to admit but it
-            never gets boring with its nutty flavor and enticing aroma it will
+            Pollo.
+        </p>
+        
+        <p>
+            I have eaten it more than I would like to admit but it
+            never gets boring with its nutty flavor and enticing aroma, it will
             be the center piece of any mexican food night.
         </p>
         
