--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="./recipes/baked-penne.html">Baked Penne</a></li>
             <li><a href="./recipes/teriyaki-chicken.html">Teriyaki Chicken</a></li>
-            <li><a href="./recipes/mexican-red-rice.html">Mexican Red Rice</a></li>
+            <li><a href="./recipes/arroz-con-pollo.html">Arroz con Pollo</a></li>
         </ul>
     </body>
 </html>
