Add ingredients for Arroz Con Pollo recipe.

--- a/recipes/arroz-con-pollo.html
+++ b/recipes/arroz-con-pollo.html
@@ -31,10 +31,22 @@
         <h2>Ingredients</h2>
 
         <ul>
-            <li></li>
+            <li>2 pounds of bone-in skinless chicken rear quarters</li>
+            <li>Adobo seasoning</li>
+            <li>3 cups of Jasmine Rice</li>
+            <li>2 TBSPs of tomato flavored chicken Bouillon</li>
+            <li>2 packets of Sazon culantro y achiote</li>
+            <li>2 14.5 ounce cans of Pigeon Peas.</li>
+            <li>10 ounces of frozen mixed vegatables.</li>
+            <li>Salt and pepper to taste</li>
+
         </ul>
-
-
+        
+        <h2>Steps</h2>
+        
+        <ol>
+            <li></li>
+        </ol>
 
     </body>
 </html>
